@@ -16,6 +16,14 @@ import javafx.scene.shape.Circle;
 import javafx.scene.shape.Line;
 import javafx.stage.Stage;
 
+/* ==== Это поле VM Options ====
+
+--module-path
+c:\Java\javafx-sdk-11.0.2\lib\
+--add-modules=javafx.controls,javafx.fxml
+
+*/
+
 public class TicTacToe extends Application {
     private static final String JOB4J = "Крестики-нолики www.job4j.ru";
     private final int size = 3;
